--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       <h1 class="project-name">Console-board</h1>
       <h2 class="project-tagline"> Display all console output in real html</h2>
       <a href="https://github.com/xiaobuu/console-board" class="btn">View on GitHub</a>
-      <a href="https://github.com/xiaobuu/console-board/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/xiaobuu/console-board/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://xiaobuu.github.io/console-board/demos/" class="btn">Checkout the Demo!</a>
     </section>
 
     <section class="main-content">
